--- a/index.html
+++ b/index.html
@@ -106,15 +106,14 @@
             
            
             <div class="intro-text">
-                <div class="intro-lead-in">ICLR 2024 Workshop on</div>
+                <div class="intro-lead-in">ICML 2024 Workshop on</div>
                 <br>
-                <div class="intro-heading">Reliable and Responsible Foundation Models</div>
+                <div class="intro-heading">Red Teaming GenAI: What Can We Learn from Adversaries?</div>
                 <br>
-            <br>
-
+            <!-- <br>
                 <div class="intro-lead-in">May 11, 2024</div>
                 <br>
-                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div>
+                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> -->
                 <!-- <div class="intro-lead-in"> Time Series Workshop @ <a href="https://icml.cc/Conferences/2019"
                         target=_blank>ICML 2019</a></br>June 14, 2019. Long Beach, USA</div> -->
                 <!--a href="#call" target=_blank class="page-scroll btn btn-xl">Submit a Paper</a-->
