--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Workshop on Reliable and Responsible Foundation Models at ICLR 2024">
 
 
-    <title>ICLR 2024 Workshop on Reliable and Responsible Foundation Models </title>
+    <title>ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries? </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./files_new/bootstrap.min.css" rel="stylesheet">
@@ -110,13 +110,13 @@
                 <br>
                 <div class="intro-heading">Red Teaming GenAI: What Can We Learn from Adversaries?</div>
                 <br>
-            <!-- <br>
-                <div class="intro-lead-in">May 11, 2024</div>
+            <br>
+                <!-- <div class="intro-lead-in">May 11, 2024</div> -->
                 <br>
                 <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> -->
                 <!-- <div class="intro-lead-in"> Time Series Workshop @ <a href="https://icml.cc/Conferences/2019"
                         target=_blank>ICML 2019</a></br>June 14, 2019. Long Beach, USA</div> -->
-                <!--a href="#call" target=_blank class="page-scroll btn btn-xl">Submit a Paper</a-->
+                <!--a href="#call" target=_blank class="page-scroll btn btn-xl">Submit a Paper</a
             </div>
         </div>
     </header>
