--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <br>
                 <!-- <div class="intro-lead-in">May 11, 2024</div> -->
                 <br>
-                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> -->
+                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> 
                 <!-- <div class="intro-lead-in"> Time Series Workshop @ <a href="https://icml.cc/Conferences/2019"
                         target=_blank>ICML 2019</a></br>June 14, 2019. Long Beach, USA</div> -->
                 <!--a href="#call" target=_blank class="page-scroll btn btn-xl">Submit a Paper</a
