--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="shortcut icon" href="www.mnpham.com/redteaming-gen-ai.github.io//favicon.ico?">
+    <link rel="shortcut icon" href="iclr-r2fm.github.io/favicon.ico?">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,33 +48,33 @@
                     </ul>-->
                     <ul class="nav navbar-nav navbar-middle">
                         <li class="hidden active">
-                            <a href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#page-top"></a>
+                            <a href="iclr-r2fm.github.io/index.html#page-top"></a>
                         </li>
 
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#" style="left: -80px; font-size:22px;">ICLR 2024 Workshop on Reliable and Responsible Foundation Models</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#" style="left: -80px; font-size:22px;">ICLR 2024 Workshop on Reliable and Responsible Foundation Models</a>
                         </li>
                         <li>
                             <a style="padding-left: 20px;"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#introduction">Overview</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#introduction">Overview</a>
                         </li>
 
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#call">Call for Papers</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#call">Call for Papers</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#dates">Important Dates</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#dates">Important Dates</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#program">Schedule</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#program">Schedule</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#speaker">Invited Speakers</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#speaker">Invited Speakers</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="www.mnpham.com/redteaming-gen-ai.github.io//index.html#organization">Organizers</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#organization">Organizers</a>
                         </li>
                         <li>
                         <!--<li>
@@ -113,7 +113,7 @@
             <br>
                 <!-- <div class="intro-lead-in">May 11, 2024</div> -->
                 <br>
-                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> 
+                <div class="intro-lead-in">The workshop will be held in a hybrid format.</div> -->
                 <!-- <div class="intro-lead-in"> Time Series Workshop @ <a href="https://icml.cc/Conferences/2019"
                         target=_blank>ICML 2019</a></br>June 14, 2019. Long Beach, USA</div> -->
                 <!--a href="#call" target=_blank class="page-scroll btn btn-xl">Submit a Paper</a
