--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Workshop on Reliable and Responsible Foundation Models at ICLR 2024">
+    <meta name="description" content="ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries?">
 
 
     <title>ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries? </title>
@@ -134,9 +134,10 @@
             <div class="row text-justify">
                 <div class="col-md-12">
                     <p class="large text-muted">
-In the era of AI-driven transformations, foundation models (FMs), like large-scale language and vision models, have become pivotal in various applications, from natural language processing to computer vision. These models, with their immense capabilities, offer a plethora of benefits but also introduce challenges related to reliability, transparency, and ethics. The workshop on reliable and responsible FMs (R2-FM) delves into the urgent need to ensure that such models are trustworthy and aligned with human values. The significance of this topic cannot be overstated, as the real-world implications of these models impact everything from daily information access to critical decision-making in fields like medicine and finance. Stakeholders, from developers to end-users, care deeply about this because the responsible design, deployment, and oversight of these models dictate not only the success of AI solutions but also the preservation of societal norms, equity, and fairness. Some of the fundamental questions that this workshop aims to address are:                    </p>
-                    <br>
-                    <ul class="large text-muted" ,="" style="float:left; width: 100%"> 
+                        With the rapid development of Generative AI (GenAI), ensuring their safety, security, and trustworthiness is paramount. In response, researchers and practitioners have proposed *red teaming* to identify such risks, enabling their mitigation. Red teaming refers to adversarial tactics employed to identify flaws in GenAI-based systems, such as security vulnerabilities, harmful or discriminating outputs, privacy breaches, energy-latency attacks, and copyright law violations.                    <br>
+                        <br>
+                        Recent research focuses on comprehensive evaluation frameworks for AI models, addressing safety and security risks. However, these efforts often provide only short-term solutions. The rapid evolution of AI necessitates ongoing updates to benchmarks to avoid them from becoming outdated due to models being excessively tailored to these benchmarks. Moreover, such evaluations must also incorporate the latest findings from AI safety research, which consistently expose new breaches in generative models. At the same time, other works point out the lack of consensus around the scope, structure, and assessment criteria for AI red teaming.
+                        <ul class="large text-muted" ,="" style="float:left; width: 100%"> 
                     <li>How can we identify and characterize unreliable and irresponsible behaviors in FMs? Topics include susceptibility to spurious features, prompt sensitivity, lack of self-consistency, and issues of nonfactuality or “hallucinations”</li>
                     <li>How should we assess the potentially harmful capabilities of FMs and quantify their societal impact? For example, how can we predict the consequences of misuse of highly capable large language models?</li>
                     <li>How can we pinpoint and understand the causes behind known or emerging sources of FM unreliability? This may involve examining training data, objectives, architectural design, learned weights, or other facets.</li><li>What principles or guidelines should inform the design of the next generation of FMs to ensure they are both reliable and responsible?</li><li>Can we establish theoretical frameworks that guarantee the reliability and responsibility of FMs?</li><li>In practical applications, how might we leverage domain-specific knowledge to guide FMs towards improved reliability and responsibility across diverse areas, such as drug discovery, education, or clinical health?</li></ul><br>
