--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 
                 <div class="col-md-12">
                     <p class="large text-muted">
-                        <b>Overview</b>
+                        <font size="+2"><b>Overview</b></font>
                         <br><br>
                         With the rapid development of Generative AI (GenAI), ensuring their safety, security, and trustworthiness is paramount. In response, researchers and practitioners have proposed *red teaming* to identify such risks, enabling their mitigation. Red teaming refers to adversarial tactics employed to identify flaws in GenAI-based systems, such as security vulnerabilities, harmful or discriminating outputs, privacy breaches, energy-latency attacks, and copyright law violations.
                         <br><br>
