--- a/index.html
+++ b/index.html
@@ -152,6 +152,25 @@
         </div>
     </section>
 
+    <section id="Competition">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <h2 class="section-heading">Jailbreaking defense competition (sponsored by Arthur AI)</h2>
+                    <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
+                </div>
+            </div>
+            <div class="row text-justify">
+                
+                <div class="col-md-12">
+                    <p class="large text-muted">
+                        We will host a competition where participants compete to develop defenses against jailbreaking attacks. We will craft a collection of jailbreaking prompts against open-source models from existing literature, known to elicit bias harmful responses, or circumvent refusal mechanisms.
+                        <br><br>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- call for papers -->
     <!-- <section id="call" class="bg-mid-gray"> -->
     <section id="call">
