--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="shortcut icon" href="favicon.ico?">
+    <link rel="shortcut icon" href="iclr-r2fm.github.io/favicon.ico?">
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries?">
+    <meta name="description" content="Workshop on Reliable and Responsible Foundation Models at ICLR 2024">
 
 
-    <title>ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries? </title>
+    <title>ICLR 2024 Workshop on Reliable and Responsible Foundation Models </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./files_new/bootstrap.min.css" rel="stylesheet">
@@ -48,33 +48,33 @@
                     </ul>-->
                     <ul class="nav navbar-nav navbar-middle">
                         <li class="hidden active">
-                            <a href="index.html#page-top"></a>
+                            <a href="iclr-r2fm.github.io/index.html#page-top"></a>
                         </li>
 
                         <li>
-                            <a class="page-scroll" href="index.html#" style="left: -80px; font-size:22px;">ICLR 2024 Workshop on Reliable and Responsible Foundation Models</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#" style="left: -80px; font-size:22px;">ICLR 2024 Workshop on Reliable and Responsible Foundation Models</a>
                         </li>
                         <li>
                             <a style="padding-left: 20px;"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#introduction">Overview</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#introduction">Overview</a>
                         </li>
 
                         <li>
-                            <a class="page-scroll" href="index.html#call">Call for Papers</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#call">Call for Papers</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#dates">Important Dates</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#dates">Important Dates</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#program">Schedule</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#program">Schedule</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#speaker">Invited Speakers</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#speaker">Invited Speakers</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="index.html#organization">Organizers</a>
+                            <a class="page-scroll" href="iclr-r2fm.github.io/index.html#organization">Organizers</a>
                         </li>
                         <li>
                         <!--<li>
@@ -151,7 +151,6 @@
                 </div>
             </div>
             <div class="row text-justify">
-                
                 <div class="col-md-12">
                     <p class="large text-muted">
                         We will host a competition where participants compete to develop defenses against jailbreaking attacks. We will craft a collection of jailbreaking prompts against open-source models from existing literature, known to elicit bias harmful responses, or circumvent refusal mechanisms.
