--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries?">
+    <meta name="description" content="Workshop on Reliable and Responsible Foundation Models at ICLR 2024">
 
 
-    <title>ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries?</title>
+    <title>ICLR 2024 Workshop on Reliable and Responsible Foundation Models </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./files_new/bootstrap.min.css" rel="stylesheet">
