--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Workshop on Reliable and Responsible Foundation Models at ICLR 2024">
 
 
-    <title>ICLR 2024 Workshop on Reliable and Responsible Foundation Models </title>
+    <title>ICML 2024 Workshop on Red Teaming GenAI: What Can We Learn from Adversaries? </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="./files_new/bootstrap.min.css" rel="stylesheet">
