--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
                         <li>
                             <a class="page-scroll" href="index.html#introduction">Overview</a>
                         </li>
-
+                        <li>
+                            <a class="page-scroll" href="index.html#competition">Competition</a>
+                        </li>
                         <li>
                             <a class="page-scroll" href="index.html#call">Call for Papers</a>
                         </li>
@@ -129,6 +131,39 @@
             <div class="row">
                 <div class="col-lg-12 ">
                     <h2 class="section-heading">Overview</h2>
+                    <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
+                </div>
+            </div>
+            <div class="row text-justify">
+                <div class="col-md-12">
+                    <p class="large text-muted">
+                    With the rapid development of Generative AI (GenAI), ensuring their safety, security, and trustworthiness is paramount. In response, researchers and practitioners have proposed *red teaming* to identify such risks, enabling their mitigation. Red teaming refers to adversarial tactics employed to identify flaws in GenAI-based systems, such as security vulnerabilities, harmful or discriminating outputs, privacy breaches, energy-latency attacks, and copyright law violations. </p>
+                    <br>
+                    <p class="large text-muted">
+                    Recent research focuses on comprehensive evaluation frameworks for AI models, addressing safety and security risks. However, these efforts often provide only short-term solutions. The rapid evolution of AI necessitates ongoing updates to benchmarks to avoid them from becoming outdated due to models being excessively tailored to these benchmarks. Moreover, such evaluations must also incorporate the latest findings from AI safety research, which consistently expose new breaches in generative models. At the same time, other works point out the lack of consensus around the scope, structure, and assessment criteria for AI red teaming. </p>
+                    <br>
+                    <p class="large text-muted">
+                    In response to the findings from red teaming exercises, researchers have taken action to curb undesirable behaviors in AI models through various methods. These include aligning the models with ethical standards, defending against jailbreak attempts, preventing the generation of untruthful content, erasing undesired concepts from the models, and even leveraging adversaries for beneficial purposes. Despite these efforts, a multitude of risks remain unresolved, underscoring the importance of continuous research in addressing the challenges identified through red teaming. </p>
+                    <br>
+                    <p class="large text-muted">
+                    <i>The goal of this workshop is to bring leading researchers on AI safety together to discuss pressing real-world challenges faced by ever-evolving generative models.</i> We put a special emphasis on red teaming and quantitative evaluations towards probing the limitations of our models. Some of the fundamental questions that this workshop will address include (1) What are new security and safety risks in foundation models? (2) How do we discover and quantitatively evaluate harmful capabilities of these models? (3) How can we mitigate risks found through red teaming? (4) Can we make safety guarantees? </p>
+                    <br>
+                    <!-- <ul class="large text-muted" ,="" style="float:left; width: 100%"> 
+                    <li>How can we identify and characterize unreliable and irresponsible behaviors in FMs? Topics include susceptibility to spurious features, prompt sensitivity, lack of self-consistency, and issues of nonfactuality or “hallucinations”</li>
+                    <li>How should we assess the potentially harmful capabilities of FMs and quantify their societal impact? For example, how can we predict the consequences of misuse of highly capable large language models?</li>
+                    <li>How can we pinpoint and understand the causes behind known or emerging sources of FM unreliability? This may involve examining training data, objectives, architectural design, learned weights, or other facets.</li><li>What principles or guidelines should inform the design of the next generation of FMs to ensure they are both reliable and responsible?</li><li>Can we establish theoretical frameworks that guarantee the reliability and responsibility of FMs?</li><li>In practical applications, how might we leverage domain-specific knowledge to guide FMs towards improved reliability and responsibility across diverse areas, such as drug discovery, education, or clinical health?</li></ul><br> -->
+                    <p></p><br>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Competition Section -->
+    <section id="competition">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <h2 class="section-heading">Competition</h2>
                     <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
                 </div>
             </div>
