--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                             <a class="page-scroll" href="index.html#competition">Competition</a>
                         </li>
                         <li>
+                            <a class="page-scroll" href="index.html#format">Format</a>
+                        </li>
+                        <li>
                             <a class="page-scroll" href="index.html#call">Call for Papers</a>
                         </li>
                         <li>
@@ -163,7 +166,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 ">
-                    <h2 class="section-heading">Competition</h2>
+                    <h2 class="section-heading">Jailbreaking defense competition (sponsored by Arthur AI)</h2>
                     <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
                 </div>
             </div>
@@ -175,13 +178,28 @@
                     <p class="large text-muted">
                     We will randomly select prompts from each category as a public set, and competitors or teams will then engineer defenses against these harmful prompts, for example using hidden prompts or fine-tuning. The proposed solutions will then be evaluated on held out prompts from each relevant category.  A committee made of organizers will vote on the best three defenses with a scoring rubric that values effectiveness, practicality, and broad applicability.  The top three teams will share a prize pool of 6,000&dollar;, generously sponsored by Arthur AI, and will also get a 10-minute lightning talk on their defense at the workshop. We will subsequently compile a paper containing submitted defenses, and participants will be included as authors. We will open the competition and release materials on May 15, 2024, and we will accept submissions until July 1. </p>
                     <br>
-                    <!-- <p class="large text-muted">
-                    In response to the findings from red teaming exercises, researchers have taken action to curb undesirable behaviors in AI models through various methods. These include aligning the models with ethical standards, defending against jailbreak attempts, preventing the generation of untruthful content, erasing undesired concepts from the models, and even leveraging adversaries for beneficial purposes. Despite these efforts, a multitude of risks remain unresolved, underscoring the importance of continuous research in addressing the challenges identified through red teaming. </p>
-                    <br> -->
-                    <!-- <ul class="large text-muted" ,="" style="float:left; width: 100%"> 
-                    <li>How can we identify and characterize unreliable and irresponsible behaviors in FMs? Topics include susceptibility to spurious features, prompt sensitivity, lack of self-consistency, and issues of nonfactuality or “hallucinations”</li>
-                    <li>How should we assess the potentially harmful capabilities of FMs and quantify their societal impact? For example, how can we predict the consequences of misuse of highly capable large language models?</li>
-                    <li>How can we pinpoint and understand the causes behind known or emerging sources of FM unreliability? This may involve examining training data, objectives, architectural design, learned weights, or other facets.</li><li>What principles or guidelines should inform the design of the next generation of FMs to ensure they are both reliable and responsible?</li><li>Can we establish theoretical frameworks that guarantee the reliability and responsibility of FMs?</li><li>In practical applications, how might we leverage domain-specific knowledge to guide FMs towards improved reliability and responsibility across diverse areas, such as drug discovery, education, or clinical health?</li></ul><br> -->
+                    <p></p><br>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Format Section -->
+    <section id="format">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <h2 class="section-heading">Format</h2>
+                </div>
+            </div>
+            <div class="row text-justify">
+                <div class="col-md-12">
+                    <p class="large text-muted">
+                    Our workshop will include (i) a competition on defending against jailbreaking attacks described above, (ii) invited talks from leading researchers on AI safety, (iii) contributed talks for exceptional submissions and competition winners, (iv) a poster session, (v) a panel discussion. </p>
+                    <br>
+                    <p class="large text-muted">
+                    To ensure the accessibility of our workshop for virtual attendees, we will stream all presentations and facilitate questions from online attendees via Rocketchat.  Find the associated schedule below. </p>
+                    <br>
                     <p></p><br>
                 </div>
             </div>
