--- a/index.html
+++ b/index.html
@@ -218,10 +218,9 @@
                     <div class="row text-justify">
                         <div class="col-md-12">
 
+                            <p class="large text-muted"><b>Submission URL:</b> [URL] </p>
 
-                            <p class="large text-muted">We invite submissions from researchers in the fields of reliability and responsibility pertaining to foundation models. Additionally, we welcome contributions from scholars in the natural sciences (such as physics, chemistry, and biology) and social sciences (including pedagogy and sociology) that necessitate the use of reliable and responsible foundation models In summary, our topics of interest include, but are not limited to:</p>
-
-                            <ul class="large text-muted" style="float:left; width: 100%">
+                            <!-- <ul class="large text-muted" style="float:left; width: 100%">
                                 <li>Theoretical foundations of FMs and related domains</li>
                                 <li>Empirical investigations into the reliability and responsibility of various FMs</li>
                                 <li>In-depth discussions exploring new dimensions of foundation model reliability and responsibility</li>
@@ -241,7 +240,7 @@
                             <p class="large text-muted"><mybold>Visibility:</mybold> &nbsp;Submissions and reviews will not be public. Only accepted papers will be made public.
                             </p>
                             <p class="large text-muted">For any questions, please contact us at <a href="mailto:r2fm2024@googlegroups.com">r2fm2024@googlegroups.com</a>.
-                            </p>
+                            </p> -->
                             <br>
                         </div>
                     </div>
