--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
 
                             <p class="large text-muted"><b>Submission URL:</b> [URL] </p>
 
+                            <p class="large text-muted"><b>Length and Formatting:</b> Submitted papers must be up to [TODO, 4?] pages in pdf format using the <a href='https://icml.cc/Conferences/2024/CallForPapers'>ICML 2024 Style Files</a>, including figures and tables. Authors are permitted to upload unlimited supplementary materials and references with their submissions. Please upload only one document, placing appendices and supplementary materials at the end of the submission. Reviewers are not required to consider supplementary materials in their decision. Note that submitted papers must be in English, and we use a mutually anonymous review process. Authors are required to omit their names and affiliations from tehir submissions and avoid identifying statements.</p>
+                            
+                            <p class="large text-muted"><b>Non-Archival and Dual-submission policy:</b> This workshop is non-archival and will not have official proceedings. Accepted papers will be made public on the workshop website. We welcome ongoing and unpublished work, as well as papers that are under review at the time of submission. </p>
+
                             <!-- <ul class="large text-muted" style="float:left; width: 100%">
                                 <li>Theoretical foundations of FMs and related domains</li>
                                 <li>Empirical investigations into the reliability and responsibility of various FMs</li>
