--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </div>
             </div>
             <p class="large text-muted">
-            This is the tentative schedule of the workshop. All slots are provided in Central European Time (CET). 
+            This is a tentative workshop schedule. All times are provided in Central European Time (CET). 
             </p>
             <div id="schedule">
                 <div class="container w">
@@ -338,30 +338,34 @@
                         <table class="table table-striped" border="2" cellpadding="2" cellspacing="2">
                             <tbody>
                                 <tr>
-                                    <td> 08:50 - 09:00</td>
-                                    <td>Introduction and opening remarks</td>
+                                    <td>8:30 - 8:50</td>
+                                    <td>Informal coffee session</td>
                                 </tr>
                             <tr>
-                                    <td>09:00 - 09:30 </td>
-                                    <td>Invited Talk 1</td>
+                                    <td>8:50 - 9:00</td>
+                                    <td>Introduction and opening remarks</td>
                                 </tr><tr>
-                                    <td>09:30 - 10:00 </td>
-                                    <td>Invited Talk 2</td>
+                                    <td>9:00 - 9:40</td>
+                                    <td>Invited talk 1: Katherine Lee and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>10:00 - 10:15</td>
-                                    <td>Contributed Talk 1</td>
+                                    <td>9:40 - 10:00</td>
+                                    <td>Invited talk 2: Andy Zou and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>10:15 - 11:15 </td>
-                                    <td>Poster Session 1</td>
+                                    <td>10:00 - 10:40</td>
+                                    <td>Invited talk 3: Danqi Chen and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>11:15 - 11:45 </td>
-                                    <td>Invited Talk 3</td>
+                                    <td>10:40 - 11:00</td>
+                                    <td>Coffee Break</td>
                                 </tr><tr>
-                                    <td>11:45 - 12:15 </td>
-                                    <td>Invited Talk 4</td>
+                                    <td>11:00 - 11:45</td>
+                                    <td>Contributed Talks</td>
                                 </tr><tr>
-                                    <td>12:15 - 13:30</td>
-                                    <td>Break</td>
+                                    <td>11:45 - 12:30</td>
+                                    <td>Panel Discussion</td>
+                                </tr>
+                                </tr><tr>
+                                    <td>12:30 - 13:30</td>
+                                    <td>Lunch Break</td>
                                 </tr></tbody>
 
                         </table>
