--- a/index.html
+++ b/index.html
@@ -375,30 +375,27 @@
                         <table class="table table-striped" border="2" cellpadding="2" cellspacing="2">
                             <tbody>
                                 <tr>
-                                    <td>13:30 - 14:00</td>
-                                    <td>Invited Talk 5</td>
+                                    <td>13:30 - 15:00</td>
+                                    <td>Poster session</td>
                                 </tr>
                             <tr>
-                                    <td> 14:00 - 14:30</td>
-                                    <td>Invited Talk 6</td>
+                                    <td>15:00 - 15:40</td>
+                                    <td>Invited talk 4: Nicolas Papernot and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>14:30 - 14:45</td>
-                                    <td>Contributed Talk 2</td>
+                                    <td>15:40 - 16:00</td>
+                                    <td>Invited talk 5: Niloofar Mireshghallah and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>14:45 - 15:45</td>
-                                    <td>Poster Session 2</td>
+                                    <td>16:00 - 16:40</td>
+                                    <td>Jailbreaking defense competition results and contributed talks</td>
                                 </tr><tr>
-                                    <td>15:45 - 16:15</td>
-                                    <td>Invited Talk 7</td>
+                                    <td>16:40 - 17:00</td>
+                                    <td>Invited talk 6: Gowthami Somepalli and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>16:15 - 16:30</td>
-                                    <td>Contributed Talk 3</td>
+                                    <td>17:00 - 17:40</td>
+                                    <td>Invited talk 7: Vitaly Shmatikov and Q&amp;A</td>
                                 </tr><tr>
-                                    <td>16:30 - 17:00</td>
-                                    <td>Invited Talk 8</td>
-                                </tr><tr>
-                                    <td>17:00 - 18:00</td>
-                                    <td>Panel discussion</td>
+                                    <td>17:40 - 18:00</td>
+                                    <td>Closing notes</td>
                                 </tr></tbody>
                         </table>
                     </div>
