--- a/index.html
+++ b/index.html
@@ -413,7 +413,6 @@
             <div class="row">
                 <div class="col-lg-12 ">
                     <h2 class="section-heading">Invited Speakers</h2>
-                    <!--h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3-->
                 </div>
             </div>
             <br>
@@ -423,11 +422,11 @@
             <div class="row row-centered ">
                 <div class="col-sm-2">
                     <div class="team-member">
-                        <img src="./files_new/AW.jpg" height="150" width="150" class="img-responsive img-circle">
-                        <a href="https://cims.nyu.edu/~andrewgw/">
-                            <h4>Andrew Wilson</h4>
+                        <img src="./files_new/katherine-lee.png" height="150" width="150" class="img-responsive img-circle">
+                        <a href="https://katelee168.github.io/">
+                            <h4>Katherine Lee</h4>
                         </a>
-                        <p class="text-muted">New York University</p>
+                        <p class="text-muted">Google DeepMind</p>
                     </div>
                 </div>
 
