--- a/index.html
+++ b/index.html
@@ -433,22 +433,22 @@
                 <div class="row row-centered ">
                     <div class="col-sm-2">
                         <div class="team-member">
-                            <img src="./files_new/LW.jpeg" height="150" width="150" class="img-responsive img-circle">
-                            <a href="https://lilianweng.github.io/">
-                                <h4>Lilian Weng</h4>
+                            <img src="./files_new/andy-zou.png" height="150" width="150" class="img-responsive img-circle">
+                            <a href="https://andyzoujm.github.io/">
+                                <h4>Andy Zou</h4>
                             </a>
-                            <p class="text-muted">OpenAI</p>
+                            <p class="text-muted">Carnegie Mellon University</p>
                         </div>
                     </div>
 
                     <div class="row row-centered ">
                         <div class="col-sm-2">
                             <div class="team-member">
-                                <img src="./files_new/DZ.jpeg" height="150" width="150" class="img-responsive img-circle">
-                                <a href="https://dennyzhou.github.io/">
-                                    <h4>Denny Zhou</h4>
+                                <img src="./files_new/danqi-chen.png" height="150" width="150" class="img-responsive img-circle">
+                                <a href="https://www.cs.princeton.edu/~danqic/">
+                                    <h4>Danqi Chen</h4>
                                 </a>
-                                <p class="text-muted">Google DeepMind</p>
+                                <p class="text-muted">Princeton University</p>
                             </div>
                         </div>
 
@@ -457,11 +457,11 @@
                         <div class="row row-centered ">
                             <div class="col-sm-2">
                                 <div class="team-member">
-                                    <img src="./files_new/WS.jpg" height="150" width="150" class="img-responsive img-circle">
-                                    <a href="https://www.weijie-su.com/">
-                                        <h4>Weijie Su</h4>
+                                    <img src="./files_new/nicolas-papernot.png" height="150" width="150" class="img-responsive img-circle">
+                                    <a href="https://www.papernot.fr/">
+                                        <h4>Nicolas Papernot</h4>
                                     </a>
-                                    <p class="text-muted">University of Pennsylvania</p>
+                                    <p class="text-muted">University of Toronto</p>
                                 </div>
                             </div>
 
@@ -470,11 +470,11 @@
                             <div class="row row-centered ">
                                 <div class="col-sm-2">
                                     <div class="team-member">
-                                        <img src="./files_new/BK.png" height="150" width="150" class="img-responsive img-circle">
-                                        <a href="https://beenkim.github.io/">
-                                            <h4>Been Kim</h4>
+                                        <img src="./files_new/niloofar-mireshghallah.png" height="150" width="150" class="img-responsive img-circle">
+                                        <a href="https://cseweb.ucsd.edu/~fmireshg/">
+                                            <h4>Niloofar Mireshghallah</h4>
                                         </a>
-                                        <p class="text-muted">Google DeepMind</p>
+                                        <p class="text-muted">University of Washington</p>
                                     </div>
                                 </div>
 
