--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                             <a class="page-scroll" href="index.html#speaker">Invited Speakers</a>
                         </li>
                         <li>
+                            <a class="page-scroll" href="index.html#panelist">Panelists</a>
+                        </li>
+                        <li>
                             <a class="page-scroll" href="index.html#organization">Organizers</a>
                         </li>
                         <li>
@@ -592,6 +595,136 @@
                                                 <p class="text-muted">Cornell Tech</p>
                                             </div>
                                         </div>
+
+                                        <!-- <div class="row row-centered ">
+                                            <div class="col-sm-2">
+                                                <div class="team-member">
+                                                    <img src="./files_new/JZ.jpg" height="150" width="150"
+                                                        class="img-responsive img-circle">
+                                                    <a href="https://www.james-zou.com/">
+                                                        <h4>James Zou</h4>
+                                                    </a>
+                                                    <p class="text-muted">Stanford University</p>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-2">
+
+                                            </div>
+                                        </div> -->
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Panelist Section -->
+    <section id="speaker">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 ">
+                    <h2 class="section-heading">Panelists</h2>
+                </div>
+            </div>
+            <br>
+            <br>
+            <br>
+
+            <div class="row row-centered ">
+                <div class="col-sm-2">
+                    <div class="team-member">
+                        <img src="./files_new/alexander-madry.png" height="150" width="150"
+                            class="img-responsive img-circle">
+                        <a href="https://madry.mit.edu/">
+                            <h4>Alexander Madry</h4>
+                        </a>
+                        <p class="text-muted">Massachusetts Institute of Technology</p>
+                    </div>
+                </div>
+
+                <div class="row row-centered ">
+                    <div class="col-sm-2">
+                        <div class="team-member">
+                            <img src="./files_new/roei-schuster.png" height="150" width="150"
+                                class="img-responsive img-circle">
+                            <a href="http://www.roeis.com/">
+                                <h4>Roei Schuster</h4>
+                            </a>
+                            <p class="text-muted">Roei Schuster</p>
+                        </div>
+                    </div>
+
+                    <div class="row row-centered ">
+                        <div class="col-sm-2">
+                            <div class="team-member">
+                                <img src="./files_new/rowan-cheung.png" height="150" width="150"
+                                    class="img-responsive img-circle">
+                                <a href="https://www.linkedin.com/in/rowan-cheung/">
+                                    <h4>Rowan Cheung</h4>
+                                </a>
+                                <p class="text-muted">Arthur AI</p>
+                            </div>
+                        </div>
+
+
+
+                        <div class="row row-centered ">
+                            <div class="col-sm-2">
+                                <div class="team-member">
+                                    <img src="./files_new/michael-kearns.png" height="150" width="150"
+                                        class="img-responsive img-circle">
+                                    <a href="https://www.cis.upenn.edu/~mkearns/">
+                                        <h4>Michael Kearns</h4>
+                                    </a>
+                                    <p class="text-muted">University of Pennsylvania</p>
+                                </div>
+                            </div>
+
+
+
+                            <!-- <div class="row row-centered ">
+                                <div class="col-sm-2">
+                                    <div class="team-member">
+                                        <img src="./files_new/niloofar-mireshghallah.png" height="150" width="150"
+                                            class="img-responsive img-circle">
+                                        <a href="https://cseweb.ucsd.edu/~fmireshg/">
+                                            <h4>Niloofar Mireshghallah</h4>
+                                        </a>
+                                        <p class="text-muted">University of Washington</p>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="container">
+                                <br>
+                                <br>
+                                <div class="row row-centered ">
+                                    <div class="col-sm-2">
+                                        <div class="team-member">
+                                            <img src="./files_new/gowthami-somepalli.png" height="150" width="150"
+                                                class="img-responsive img-circle">
+                                            <a href="https://somepago.github.io/">
+                                                <h4>Gowthami Somepalli</h4>
+                                            </a>
+                                            <p class="text-muted">University of Maryland</p>
+                                        </div>
+                                    </div>
+
+                                    <div class="row row-centered ">
+                                        <div class="col-sm-2">
+                                            <div class="team-member">
+                                                <img src="./files_new/vitaly-shmatikov.png" height="150" width="150"
+                                                    class="img-responsive img-circle">
+                                                <a href="https://www.cs.cornell.edu/~shmat/">
+                                                    <h4>Vitaly Shmatikov</h4>
+                                                </a>
+                                                <p class="text-muted">Cornell Tech</p>
+                                            </div>
+                                        </div> -->
 
                                         <!-- <div class="row row-centered ">
                                             <div class="col-sm-2">
